<resources>
    <string name="app_name">MathGame</string>

    <string name="title_activity_game">Game</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button">OK</string>
    <string name="none">-NO-DATA-</string>
    <string name="easy"><![CDATA[Easy  a + b <= 10]]></string>
    <string name="medium"><![CDATA[Medium a ± b <= 10]]></string>
    <string name="hard"><![CDATA[Hard  a ± b <= 20]]></string>
    <string name="impossible"><![CDATA[MAXIMUM  a ± b <= 100]]></string>
    <string name="twenty">20</string>
    <string name="ten">10</string>
    <string name="thirty">30</string>
    <string name="forty">40</string>
    <string name="fifty">50</string>
    <string name="statistic">Statistics</string>
    <string name="clear_statistics">Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send result</string>
    <string name="font">fonts/my_font2.ttf</string>
    <string name="tasks_amount">Choose amount</string>
    <string name="select_difficult">Select mode</string>
    <string name="result">Result</string>
</resources>
