<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name=".MyActivity"
    android:theme="@android:style/Theme.NoTitleBar"
    android:background="@drawable/bad_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/main_btn"
        android:alpha="0.65"
        android:background="@drawable/button_background"
        android:layout_width="125sp"
        android:layout_height="61sp"
        android:text="@string/button"
        android:textSize="25sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_amount"
        android:textSize="25sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <RadioGroup
        android:id="@+id/radio1"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_margin="5sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@drawable/radios"
            android:gravity="center_horizontal"
            android:button="@null"
            android:checked="true"
            android:text="@string/easy"
            android:textColor="@color/dark_blue"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_margin="5sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@drawable/radios"
            android:button="@null"
            android:text="@string/medium"
            android:gravity="center_horizontal"
            android:textColor="@color/dark_blue"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_margin="5sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@drawable/radios"
            android:button="@null"
            android:text="@string/hard"
            android:gravity="center_horizontal"
            android:textColor="@color/dark_blue"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_margin="5sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@drawable/radios"
            android:button="@null"
            android:text="@string/impossible"
            android:gravity="center_horizontal"
            android:textColor="@color/dark_blue"
            android:textSize="25sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">

        <RadioButton
            android:id="@+id/radioButton1s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/radio"
            android:button="@null"
            android:checked="true"
            android:gravity="center_horizontal"
            android:text="@string/ten"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton2s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/radio"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/twenty"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton3s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/radio"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/thirty"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton4s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/radio"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/forty"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton5s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/radio"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/fifty"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />
    </RadioGroup>

    <Button
        android:id="@+id/st_button"
        style="@style/my_button1"
        android:layout_width="wrap_content"
        android:layout_height="45sp"
        android:alpha="0.65"
        android:text="@string/statistic"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_difficult"
        android:textSize="25sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

</androidx.constraintlayout.widget.ConstraintLayout>